1. Few minor changes/alteration 2. Search filter condition added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,17 +6,11 @@
 
     <!--95 points by john 10 hours ago | 25 comments-->
     <string name="description" formatted="false"> %s by %s | %d %s</string>
-    <string name="time_ago" formatted="false">%d %s ago</string>
     <string name="comment_is_deleted">This comment is deleted.</string>
     <string name="comments">Comments</string>
     <string name="no_comments_available">This news contains no comments :(</string>
     <string name="loading_comments">Loading comments</string>
-
-    <plurals name="hour_plural">
-        <item quantity="one">Hour</item>
-        <item quantity="many">Hours</item>
-        <item quantity="other">Hours</item>
-    </plurals>
+    <string name="search_title_author">Search Title/Author</string>
 
     <plurals name="comments_plural">
         <item quantity="one">Comment</item>
@@ -24,34 +18,4 @@
         <item quantity="other">Comments</item>
     </plurals>
 
-    <plurals name="points_plural">
-        <item quantity="one">Point</item>
-        <item quantity="many">Points</item>
-        <item quantity="other">Points</item>
-    </plurals>
-
-    <plurals name="years_plural">
-        <item quantity="one">Year</item>
-        <item quantity="other">Years</item>
-    </plurals>
-    <plurals name="month_plural">
-        <item quantity="one">month</item>
-        <item quantity="other">months</item>
-    </plurals>
-    <plurals name="day_plural">
-        <item quantity="one">day</item>
-        <item quantity="other">days</item>
-    </plurals>
-    <plurals name="minute_plural">
-        <item quantity="one">minute</item>
-        <item quantity="other">minutes</item>
-    </plurals>
-    <plurals name="second_plural">
-        <item quantity="one">second</item>
-        <item quantity="other">seconds</item>
-    </plurals>
-    <plurals name="week_plural">
-        <item quantity="one">week</item>
-        <item quantity="other">weeks</item>
-    </plurals>
 </resources>
